# mnist_cc

./: LICENSE  README.md  exercise_files  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: .pre-commit-config.yaml  pre-commit.yaml  test.yaml
conf/: config.yaml
dockerfiles/: api.dockerfile  eval.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
src/mnist_cc/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py  test_model.py  test_training.py
wandb/: latest-run
wandb/run-20260106_172138-oji8ejgo/: run-oji8ejgo.wandb
wandb/run-20260106_172228-j3t3r1tg/: run-j3t3r1tg.wandb
wandb/run-20260106_172313-zyd7d47z/: run-zyd7d47z.wandb
wandb/run-20260106_172452-2k2lz9pg/: run-2k2lz9pg.wandb
wandb/run-20260106_172452-2k2lz9pg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260106_172801-3jtyu6hx/: run-3jtyu6hx.wandb
wandb/run-20260106_172801-3jtyu6hx/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260106_173108-67emadyk/: run-67emadyk.wandb
wandb/run-20260106_173108-67emadyk/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260106_173329-cfu8j98v/: run-cfu8j98v.wandb
wandb/run-20260106_173329-cfu8j98v/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260106_173355-6mgjpi5h/: run-6mgjpi5h.wandb
wandb/run-20260106_173355-6mgjpi5h/files/: config.yaml  (+2 more)
wandb/run-20260112_102728-8glet7fc/: run-8glet7fc.wandb
(+12 files in other folders)
